fixed css overflow

--- a/src/scss/components/_column.scss
+++ b/src/scss/components/_column.scss
@@ -22,7 +22,6 @@
     display: flex;
     width: 30%;
     min-width: 100px;
-    align-items: center;
     flex-direction: column;
     background-color: $color-option-bg;
   }
